...
                                .font(.subheadline)
                                .foregroundColor(.gray)
                        }
                    }
                }
            }
            .navigationTitle("Patients")
            .searchable(text: $patientStore.searchText)

            .toolbar {
                ToolbarItem(placement: .bottomBar) {
                        NavigationLink(destination: NewPatientFormView(patientStore: patientStore)) {
                            Text("Add Patient")
                                .padding(10)
                                .background(Color.pink)
                                .foregroundColor(.white)
                                .cornerRadius(10)
                        }

...
